rs/eros/tests/trybuild/cannot_call_union_on_traced_union_result.stderr
error[E0599]: the method `into_union` exists for enum `Result<(), ErrorUnion>`, but its trait bounds were not satisfied
 --> tests/trybuild/cannot_call_union_on_traced_union_result.rs:8:25
  |
8 |     let _error = result.into_union();
  |                         ^^^^^^^^^^
  |
 ::: $RUST/core/src/result.rs
  |
  | pub enum Result<T, E> {
  | --------------------- doesn't satisfy `Result<(), ErrorUnion>: IntoUnion<(), ErrorUnion>`
  |
 ::: src/error_union.rs
  |
  | pub struct ErrorUnion<E: TypeSet = AnyError> {
  | -------------------------------------------- doesn't satisfy `ErrorUnion: SendSyncError`
  |
  = note: the following trait bounds were not satisfied:
          `ErrorUnion: SendSyncError`
          which is required by `Result<(), ErrorUnion>: IntoUnion<(), ErrorUnion>`
